--- a/app/src/main/res/layout/activity_askbuy_make_order2.xml
+++ b/app/src/main/res/layout/activity_askbuy_make_order2.xml
@@ -16,7 +16,7 @@
             android:id="@+id/llContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
+            android:visibility="gone"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -170,7 +170,9 @@
                     android:layout_alignLeft="@id/txtConsigner"
                     android:layout_alignTop="@id/linearLayout0"
                     android:lineSpacingExtra="2dp"
-                    android:text="请选择收货地址"
+                    android:hint="请选择收货地址"
+                    android:textColorHint="@color/new_gray_light_color"
+                    android:text=""
                     android:textSize="14sp"
                     android:textColor="@color/new_gray_color"/>
             </RelativeLayout>
@@ -245,7 +247,7 @@
                         android:lineSpacingExtra="2dp"
                         android:textSize="13sp"
                         android:textColor="@color/new_gray_color"
-                        android:textColorHint="@color/new_gray_light_color"/>
+                        android:textColorHint="@color/light_gray_color"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -272,9 +274,11 @@
                     android:id="@+id/txtProtocol"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:autoLink="all"
+                    android:paddingRight="20dp"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
                     android:textSize="12sp"
-                    android:textColor="@color/text_black_color"
+                    android:textColor="@color/new_gray_color"
                     android:text="提交订单即视为同意丝网+《交易协议》内容"/>
             </LinearLayout>
 
