--- a/app/src/main/res/layout/activity_audit_menu.xml
+++ b/app/src/main/res/layout/activity_audit_menu.xml
@@ -182,6 +182,92 @@
             </LinearLayout>
 
 
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:id="@+id/rlAskBuyOrder"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/select_white_background"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/imgViAskBuyOrder"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:src="@mipmap/audit_askbuy_order"
+                        android:layout_marginTop="20dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/imgViAskBuyOrder"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:textColor="@color/text_black_color2"
+                        android:textSize="15sp"
+                        android:text="求购订单"/>
+
+                    <TextView
+                        android:id="@+id/unReadAskbuyOrder"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:visibility="gone"
+                        android:background="@drawable/shape_red_dot_rectangle"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/while_color"
+                        android:text="5"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rlAskBuyReceipt"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible"
+                    android:background="@drawable/select_white_background"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/imgViAskBuyReceipt"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:src="@mipmap/audit_askbuy_receipt"
+                        android:layout_marginTop="20dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/imgViAskBuyReceipt"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:textColor="@color/text_black_color2"
+                        android:textSize="15sp"
+                        android:text="求购收款"/>
+
+                    <TextView
+                        android:id="@+id/unReadAskBuyReceipt"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:visibility="gone"
+                        android:background="@drawable/shape_red_dot_rectangle"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:textColor="@color/while_color"
+                        android:text="5"/>
+                </RelativeLayout>
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
