--- a/app/src/main/res/layout/activity_freight_detail_offering.xml
+++ b/app/src/main/res/layout/activity_freight_detail_offering.xml
@@ -272,7 +272,7 @@
                 android:layout_height="105dp"
                 android:layout_marginTop="15dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/ask_buy_security"/>
+                android:src="@mipmap/official_security"/>
 
             <LinearLayout
                 android:id="@+id/llRecord"
