--- a/app/src/main/res/layout/activity_freight_detail_underway.xml
+++ b/app/src/main/res/layout/activity_freight_detail_underway.xml
@@ -33,10 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp">
+        android:layout_margin="6dp">
 
         <TextView
             android:id="@+id/btn0"
@@ -45,8 +42,8 @@
             android:layout_weight="1"
             android:background="@drawable/selector_btn_blue"
             android:gravity="center"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
+            android:paddingBottom="12dp"
+            android:paddingTop="12dp"
             android:text="我要发货"
             android:textColor="@color/while_color"
             android:textSize="15sp" />
@@ -57,11 +54,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:visibility="visible"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="6dp"
             android:background="@drawable/selector_btn_blue"
             android:gravity="center"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             android:text="成为司机"
             android:textColor="@color/while_color"
             android:textSize="15sp" />
