--- a/app/src/main/res/layout/activity_processing.xml
+++ b/app/src/main/res/layout/activity_processing.xml
@@ -124,6 +124,7 @@
             android:id="@+id/tv_inquiry"
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:visibility="gone"
             android:layout_alignParentBottom="true"
             android:background="@drawable/select_white_background"
             android:gravity="center"
