--- a/app/src/main/res/layout/activity_release_ask_buy.xml
+++ b/app/src/main/res/layout/activity_release_ask_buy.xml
@@ -163,7 +163,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
-                android:layout_marginBottom="20dp"
                 android:background="@color/view_background_gray_color"
                 android:gravity="left|top"
                 android:padding="10dp"
@@ -174,6 +173,18 @@
                 android:textColor="@color/text_black_color"
                 android:textColorHint="@color/light_gray_color"
                 android:textSize="13sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="15dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="30dp"
+                android:lineSpacingExtra="2dp"
+                android:text="注：在丝网+平台交易，全部产品均为现金交易，不赊欠"
+                android:textColor="@color/red_color"
+                android:textSize="12sp"/>
 
         </LinearLayout>
     </ScrollView>
