--- a/app/src/main/res/layout/fragment_hom4.xml
+++ b/app/src/main/res/layout/fragment_hom4.xml
@@ -391,6 +391,7 @@
                     android:id="@+id/llRecommend"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:background="@color/while_color"
                     android:orientation="vertical">
 
