--- a/app/src/main/res/layout/item_lv_offer_record.xml
+++ b/app/src/main/res/layout/item_lv_offer_record.xml
@@ -12,6 +12,7 @@
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:text="平台报价"
         android:textColor="@color/text_black_color"
         android:textSize="14sp"/>
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="***元/套"
         android:textColor="@color/text_black_color"
         android:textSize="14sp"/>
@@ -30,8 +32,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:text="10-10 13:40:22"
         android:textColor="@color/text_black_color"
         android:textSize="14sp"/>
+
+    <TextView
+        android:id="@+id/txtHandle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/selector_btn_blue"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:text="购买"
+        android:textColor="@color/while_color"
+        android:textSize="12sp"/>
 
 </RelativeLayout>
