--- a/app/src/main/res/layout/item_recycler_ask_buy_list.xml
+++ b/app/src/main/res/layout/item_recycler_ask_buy_list.xml
@@ -23,7 +23,7 @@
         android:layout_marginLeft="10dp"
         android:text="昵称"
         android:textSize="15sp"
-        android:textColor="@color/light_gray_color"/>
+        android:textColor="@color/new_gray_light_color"/>
 
     <ImageView
         android:id="@+id/imgViMarkSelf"
@@ -62,21 +62,6 @@
         android:textSize="12sp"
         android:textColor="@color/light_gray_color"/>
 
-    <TextView
-        android:id="@+id/txtOffer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/selector_btn_blue"
-        android:gravity="center"
-        android:layout_marginTop="0dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:text="报价"
-        android:textColor="@color/while_color"
-        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/txtTitle"
@@ -117,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/gridImg"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:text="浏览(60)"
         android:textSize="12sp"
         android:textColor="@color/text_gray_light_color"/>
@@ -138,14 +123,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/txtReadNum"
+        android:layout_alignTop="@id/txtTime"
         android:text="报价中"
         android:textSize="13sp"
         android:textColor="@color/orange_color"/>
 
+    <TextView
+        android:id="@+id/txtOffer"
+        android:layout_width="65dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/gridImg"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/selector_btn_blue"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:text="报价"
+        android:textColor="@color/while_color"
+        android:textSize="13sp" />
+
     <View
         style="@style/LineStyle"
-        android:layout_below="@id/txtReadNum"
-        android:layout_marginTop="12dp"/>
+        android:layout_below="@id/txtOffer"
+        android:layout_marginTop="10dp"/>
 
 </RelativeLayout>
