--- a/app/src/main/res/layout/layout_freight_detail.xml
+++ b/app/src/main/res/layout/layout_freight_detail.xml
@@ -258,6 +258,6 @@
         android:layout_height="105dp"
         android:layout_marginTop="15dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ask_buy_security"/>
+        android:src="@mipmap/official_security"/>
 
 </LinearLayout>
