--- a/app/src/main/res/layout/activity_askbuy_manage_detail.xml
+++ b/app/src/main/res/layout/activity_askbuy_manage_detail.xml
@@ -160,17 +160,41 @@
     </ScrollView>
 
 
-
-    <TextView
-        android:id="@+id/txtHandle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:background="@drawable/selector_btn_blue_rect"
-        android:text="取消求购"
-        android:textSize="15sp"
-        android:textColor="@color/while_color"/>
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtHandle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:background="@drawable/selector_btn_blue"
+            android:text="取消求购"
+            android:textSize="15sp"
+            android:textColor="@color/while_color"/>
+
+        <TextView
+            android:id="@+id/txtHandle1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:visibility="gone"
+            android:gravity="center"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:background="@drawable/selector_btn_blue"
+            android:text="重新发布"
+            android:textSize="15sp"
+            android:textColor="@color/while_color"/>
+    </LinearLayout>
+
+
 
 </LinearLayout>
