--- a/app/src/main/res/layout/activity_release_offer.xml
+++ b/app/src/main/res/layout/activity_release_offer.xml
@@ -122,7 +122,7 @@
                 android:inputType="textMultiLine"
                 android:lineSpacingExtra="3dp"
                 android:minLines="6"
-                android:hint=""
+                android:hint="填写简要货物说明，不允许填写联系方式"
                 android:textColor="@color/text_black_color"
                 android:textColorHint="@color/light_gray_color"
                 android:textSize="13sp" />
