--- a/app/src/main/res/layout/item_recycler_dynamic_device.xml
+++ b/app/src/main/res/layout/item_recycler_dynamic_device.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
     android:paddingTop="15dp"
+    android:paddingBottom="15dp"
     android:orientation="vertical">
 
     <com.appjumper.silkscreen.view.BorderRectImageView
@@ -161,6 +162,7 @@
 
     <View
         style="@style/LineStyle"
+        android:visibility="gone"
         android:layout_below="@id/txtTime"
         android:layout_marginTop="15dp"/>
 
