--- a/app/src/main/res/layout/activity_specifiaction.xml
+++ b/app/src/main/res/layout/activity_specifiaction.xml
@@ -91,36 +91,55 @@
                 android:layout_height="12dp"
                 android:background="@color/view_background_gray_color" />
 
-            <View style="@style/LineStyle" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="12dp"
-                android:text="规格"
-                android:textColor="@color/black_color"
-                android:textSize="14sp" />
 
-            <View
-                style="@style/LineStyle"/>
+
+
 
 
             <LinearLayout
-                android:id="@+id/ll_specification"
+                android:id="@+id/llSpecP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
                 android:orientation="vertical">
 
+                <View style="@style/LineStyle" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="12dp"
+                    android:text="规格"
+                    android:textColor="@color/black_color"
+                    android:textSize="14sp" />
+
+                <View
+                    style="@style/LineStyle"/>
+
+
+                <LinearLayout
+                    android:id="@+id/ll_specification"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="12dp"
+                    android:paddingRight="12dp"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="12dp"
+                    android:background="@color/view_background_gray_color"/>
             </LinearLayout>
 
 
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="12dp"
-                android:background="@color/view_background_gray_color"/>
+
+
+
 
             <View style="@style/LineStyle" />
 
@@ -139,7 +158,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="备注说明"
+                        android:text="描述"
                         android:textColor="@color/black_color"
                         android:textSize="14sp" />
 
