--- a/app/src/main/res/layout/activity_specifiaction_stock.xml
+++ b/app/src/main/res/layout/activity_specifiaction_stock.xml
@@ -163,7 +163,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="备注说明"
+                        android:text="描述"
                         android:textColor="@color/black_color"
                         android:textSize="14sp" />
 
