--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -82,6 +82,7 @@
         android:id="@+id/imgViClose"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:visibility="gone"
         android:layout_alignParentRight="true"
         android:src="@mipmap/close_circle"/>
 
