--- a/app/src/main/res/layout/item_lv_offer_record.xml
+++ b/app/src/main/res/layout/item_lv_offer_record.xml
@@ -53,4 +53,20 @@
         android:textColor="@color/while_color"
         android:textSize="12sp"/>
 
+    <TextView
+        android:id="@+id/txtDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/selector_btn_blue"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:paddingLeft="23dp"
+        android:paddingRight="23dp"
+        android:text="删除报价"
+        android:textColor="@color/while_color"
+        android:textSize="12sp"/>
+
 </RelativeLayout>
