--- a/app/src/main/res/layout/fragment_hom5.xml
+++ b/app/src/main/res/layout/fragment_hom5.xml
@@ -501,7 +501,7 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/select_white_background"
                         android:paddingTop="15dp"
-                        android:paddingBottom="6dp"
+                        android:paddingBottom="8dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -529,6 +529,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:paddingRight="10dp"
+                            android:paddingTop="8dp"
                             android:orientation="vertical">
                         </LinearLayout>
 
@@ -653,6 +654,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/llHotAskBuy"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
