--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -21,20 +21,22 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="12dp"
+                android:paddingLeft="10dp"
                 android:paddingRight="12dp"
                 android:paddingTop="12dp"
                 android:text="注意：走势图为安平市场不含税均价"
                 android:textColor="@color/text_gray_color"
                 android:textSize="12sp" />
+
             <LinearLayout
                 android:id="@+id/l_avg_list"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:layout_marginLeft="12dp"
+                android:layout_height="180dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="12dp"
-                android:orientation="vertical"
-                >
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
 
             </LinearLayout>
 
