--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:visibility="gone"
                 android:padding="12dp"
                 android:text="管理"
                 android:textColor="@color/while_color"
@@ -42,31 +43,49 @@
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/rdoBtnAskBuy"
+                    android:id="@+id/rb0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rb_bg_01"
                     android:button="@null"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
+                    android:layout_marginRight="-1dp"
+                    android:paddingLeft="22dp"
+                    android:paddingRight="22dp"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
-                    android:text="求购"
+                    android:text="周边"
                     android:textSize="14sp"
                     android:textColor="@color/title_text_sel"/>
 
                 <RadioButton
-                    android:id="@+id/rdoBtnAttention"
+                    android:id="@+id/rb1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rb_bg_03"
+                    android:layout_marginLeft="-1dp"
+                    android:layout_marginRight="-1dp"
+                    android:button="@null"
+                    android:paddingLeft="22dp"
+                    android:paddingRight="22dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="新闻"
+                    android:textSize="14sp"
+                    android:textColor="@color/title_text_sel"/>
+
+                <RadioButton
+                    android:id="@+id/rb2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rb_bg_02"
                     android:button="@null"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
+                    android:layout_marginLeft="-1dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
                     android:textSize="14sp"
-                    android:text="关注"
+                    android:text="我的关注"
                     android:textColor="@color/title_text_sel"/>
 
             </RadioGroup>
@@ -77,50 +96,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:visibility="invisible"
                 android:padding="12dp"
-                android:text="发布"
+                android:text="管理"
                 android:textColor="@color/while_color"
                 android:textSize="15sp" />
         </RelativeLayout>
     </LinearLayout>
-
-<!--
-    <RadioGroup
-        android:id="@+id/rdoGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/rdoBtnAskBuy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/selector_dynamic_head_bg"
-            android:button="@null"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="求购"
-            android:textColor="@drawable/selector_text_white_blue"/>
-
-        <RadioButton
-            android:id="@+id/rdoBtnAttention"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/selector_dynamic_head_bg"
-            android:button="@null"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="关注"
-            android:textColor="@drawable/selector_text_white_blue"/>
-
-    </RadioGroup>-->
 
 
     <FrameLayout
