--- a/app/src/main/res/layout/item_lv_news.xml
+++ b/app/src/main/res/layout/item_lv_news.xml
@@ -10,9 +10,9 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.appjumper.silkscreen.view.BorderRectImageView
             android:id="@+id/iv_img"
-            android:layout_width="81dp"
+            android:layout_width="80dp"
             android:layout_height="60dp"
             android:layout_marginTop="12dp"
             android:layout_marginLeft="12dp"
@@ -34,22 +34,22 @@
                 android:lineSpacingExtra="3dp"
                 android:layout_marginLeft="5dp"
                 android:paddingLeft="7dp"
-                android:maxLines="2"
+                android:lines="2"
                 android:ellipsize="end"
                 android:text="标题标题标题标题标题标题标题标题标题标题"
-                android:textColor="@color/black_color"
-                android:textSize="16sp" />
+                android:textColor="@color/text_black_color2"
+                android:textSize="14sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
-                android:layout_marginTop="9dp">
+                android:layout_marginTop="8dp">
 
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
-                   android:visibility="invisible"
+                   android:visibility="gone"
                    android:src="@mipmap/icon_newest"/>
 
                 <TextView
@@ -58,12 +58,15 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:text="08.18 19:02"
-                    android:textColor="@color/light_gray_color"
+                    android:textColor="@color/new_gray_light_color"
                     android:textSize="12sp" />
             </RelativeLayout>
         </LinearLayout>
 
     </LinearLayout>
 
-    <View style="@style/LineStyle" />
+    <View style="@style/LineStyle"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"/>
+
 </LinearLayout>
