--- a/app/src/main/res/layout/item_lv_tender.xml
+++ b/app/src/main/res/layout/item_lv_tender.xml
@@ -11,17 +11,20 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="15dp"
         android:paddingLeft="7dp"
+        android:lineSpacingExtra="3dp"
+        android:maxLines="3"
+        android:ellipsize="end"
         android:text="安平县道路工程施工图审核招标"
-        android:textColor="@color/black_color"
-        android:textSize="15sp" />
+        android:textColor="@color/text_black_color2"
+        android:textSize="14sp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="10dp"
         android:gravity="center_vertical">
 
         <TextView
@@ -30,8 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:text="省公安局"
-            android:textColor="@color/text_gray_color"
-            android:textSize="14sp" />
+            android:textColor="@color/new_gray_light_color"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_create_time"
@@ -40,11 +43,12 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="12dp"
             android:text="11.01 19:02"
-            android:textColor="@color/light_gray_color"
+            android:textColor="@color/new_gray_light_color"
             android:textSize="12sp" />
     </RelativeLayout>
 
     <View
         style="@style/LineStyle"
-        android:layout_marginLeft="12dp" />
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"/>
 </LinearLayout>
