--- a/app/src/main/res/layout/activity_release_freight.xml
+++ b/app/src/main/res/layout/activity_release_freight.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/view_background_gray_dark_color"
+    android:background="#f3f3f4"
     android:orientation="vertical">
 
     <include layout="@layout/layout_header_with_text"/>
